--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -37,6 +37,7 @@ a:hover {
   justify-content: space-between;
   width: 100%;
   position: fixed;
+  background-color: #ffffff;
 }
 
 .navbar-menu {
@@ -90,4 +91,9 @@ a:hover {
   background-color: var(--color-blue);
   color: white;
   border: 2px solid var(--color-blue);
+}
+
+.spacer {
+    width: 100%;
+    height: 120px;
 }
